syntax = "proto3";

package pb;
option go_package = "./pkg/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "pkg/proto/order.proto"; 

service UserService {
  rpc Profile (UserId) returns (ProfileResponse);
  rpc FindUser (User) returns (User);
  rpc AddAddress (Address) returns (AddAddressResponse);
  rpc UpdateAddress (AddressPatchRequest) returns (google.protobuf.Empty);
  rpc DeleteAddress (DeleteAddressRequest) returns (google.protobuf.Empty);
  rpc GetAllAddress (UserId) returns (AddressList);
  rpc SaveCartItem (SaveCartItemRequest) returns (google.protobuf.Empty);
  rpc GetCartItemsByCartId (GetCartItemsByCartIdRequest) returns (GetCartItemsByCartIdResponseList);
  rpc UpdateCart (UpdateCartRequest) returns (google.protobuf.Empty);
  rpc RemoveCartItem (RemoveCartItemRequest) returns (google.protobuf.Empty);
  rpc AddToWishlist (AddToWishlistRequest) returns (google.protobuf.Empty);
  rpc GetWishlist (UserId) returns (Wishlist);
  rpc DeleteFromWishlist (DeleteFromWishlistRequest) returns (google.protobuf.Empty);
  rpc GetWalletHistory (UserId) returns (WalletHistory);
}

message UserId {
  uint32 userId = 1;
}

message AddressId {
  uint32 addressId = 1;
}

message ProductId {
  uint32 productId = 1;
}

message User {
  uint32 ID = 1;
  string UserName = 2;
  string FirstName = 3;
  string LastName = 4;
  uint32 Age = 5;
  string Email = 6;
  string Phone = 7;
  string Password = 8; 
  bool BlockStatus = 9;
  google.protobuf.Timestamp CreatedAt = 10;
  google.protobuf.Timestamp UpdatedAt = 11;
}

message ProfileResponse {
  uint32 ID = 1;
  string UserName = 2;
  string FirstName = 3;
  string LastName = 4;
  uint32 Age = 5;
  string Email = 6;
  string Phone = 7;
  Address DefaultAddress = 8;
  repeated pb.OrderHistory OrderHistoryList = 9;
}

message Address {
  uint32 ID = 1;
  uint32 UserID = 2;
  string House = 4;
  string AddressLine1 = 5;
  string AddressLine2 = 6;
  string City = 7;
  string State = 8;
  string ZipCode = 9;
  string Country = 10;
}

message AddressPatchRequest {
  uint32 ID = 1;
  uint32 UserID = 2;
  string House = 4;
  string AddressLine1 = 5;
  string AddressLine2 = 6;
  string City = 7;
  string State = 8;
  string ZipCode = 9;
  string Country = 10;
  bool IsDefault = 11;
  google.protobuf.Timestamp UpdatedAt = 12;
}

message SaveCartItemRequest {
  uint32 UserID = 1;
  uint32 ProductItemID = 2;
  uint32 Quantity = 3;
  float Price = 4; 
  uint32 DiscountPrice = 5;
}

message GetCartItemsByCartIdRequest {
  Pagination page = 1;
  uint32 userId = 2;
}

message GetCartItemsByCartIdResponse {
  uint32 ProductItemID = 1;
  string Name = 2;
  uint32 Price = 3;
  uint32 DiscountPrice = 4;
  uint32 Quantity = 5;
  uint32 QtyLeft = 6;
  bool StockStatus = 7;
  uint32 SubTotal = 8;
}

message UpdateCartRequest {
  uint32 UserID = 1;
  uint32 ProductItemID = 2;
  uint32 Quantity = 3;
}

message RemoveCartItemRequest {
  uint32 UserID = 1;
  uint32 ProductItemID = 2;
}

message AddToWishlistRequest {
  uint32 UserID = 1;
  uint32 ProductItemID = 2;
  uint32 Quantity = 3;
}

message Wishlist {
  uint32 ProductItemID = 1;
  string ProductName = 2;
  string Color = 3;
  string Storage = 4;
  uint32 Price = 5;
  uint32 Quantity = 6;
  string Image = 7;
}

message Wallet {
  uint32 ID = 1;
  uint32 UserID = 2;
  float Balance = 3; 
  string Remark = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
  google.protobuf.Timestamp CreatedAt = 6;
}

message DeleteAddressRequest {
  uint32 UserID = 1;
  uint32 AddressID = 2;
}

message AddressList {
  repeated Address addresses = 1;
}

message GetCartItemsByCartIdResponseList {
  repeated GetCartItemsByCartIdResponse cart_items = 1;
}

message WalletHistory {
  repeated Wallet wallets = 1;
}

// Add a custom response message for AddAddress RPC method
message AddAddressResponse {
  bool success = 1;
  string message = 2;
}

message DeleteFromWishlistRequest {
  uint32 userId  = 1;
  int32 productId  = 2;
}

